<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ls_page_background"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bungee"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/su_m"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="#FF3333"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/mail">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/chewy"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lPassword"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="#FF3333"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/chewy"
                    android:inputType="textPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">
                <CheckBox
                    android:id="@+id/remember_me"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/chewy"
                    android:minHeight="48dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />
                <Button
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="#00000000"
                    android:fontFamily="@font/chewy"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/bungee"
                android:onClick="callHome"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_loginToHome"
                />
            <Button
                android:id="@+id/Signup_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#00000000"
                android:fontFamily="@font/bungee"
                android:onClick="callSignUp"
                android:text="@string/lSignup"
                android:textColor="@color/black"
                android:transitionName="transition_signup" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>