<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_signup"
    tools:context=".SignUP3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bungee"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:transitionName="transition_signup_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/su_m"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="#FF3333"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/chewy"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/S2_Pwd"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="#FF3333"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/pwdicon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/chewy"
                    android:inputType="textPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwd1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/S2_CP"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="#FF3333"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/pwdicon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/chewy"
                    android:inputType="textPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textColorHint="#616161" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signupNAME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/bungee"
                android:onClick="call_login"
                android:text="@string/SU"
                android:textColor="@color/white"


                android:transitionName="transition_login" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>